--- a/word_clock/src/components/Header/Header.css
+++ b/word_clock/src/components/Header/Header.css
@@ -1,5 +1,9 @@
 header {
-  background-color: rgb(23, 165, 137);
+  background-color: var(--primary-color);
+  position: fixed;
+  width: 100%;
+  height: 90px;
+  z-index: 100;
 }
 
 .headline {
@@ -8,3 +12,7 @@ header {
   margin-right: auto;
 }
 
+#page-wrap {
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
