--- a/word_clock/src/index.css
+++ b/word_clock/src/index.css
@@ -1,5 +1,13 @@
+:root {
+  --primary-color: rgb(136, 61, 183);
+  --light-gray: rgb(240, 239, 245);
+}
+
 body {
   margin: 0;
+  text-align: center;
+  align-content: center;
+  background: var(--light-gray);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,16 +15,245 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 * {
   box-sizing: border-box;
 }
 
-#page-wrap {
-  padding-bottom: 10px;
-  padding-top: 10px;
+app-box {
+  display: inline-block; 
+  margin-top: 100px; /* Header + some extra space */
+  height: auto;
+  width: 300px;
+}
+
+.config {
+  background-color: rgb(240, 239, 245);/*rgb(200, 200, 200);*/
+}
+.alarm {
+  background-color: rgb(150, 150, 150);
+}
+.settings {
+  background-color: rgb(100, 100, 100);
+}
+
+h3 {
+  text-align: left;
+  padding-left: 20px;
+  color: rgb(120, 120, 120);
+  margin-bottom: 8px;
+}
+
+.box {
+  border-radius: 15px;
+  background: rgb(255, 255, 255);
+  padding: 20px;
+  
+  width: 100%;
+  text-align: left;
+  margin-bottom: 23px;
+}
+
+.box-entry {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  width: 100%;
+  display: table;
+}
+
+.box-value {
+  display: inline;
+  color: var(--primary-color);
+  text-align: right;
+  float: right;
+  font-size: 18px;
+}
+
+hr.separator {
+  border: 0.01em solid var(--light-gray);
+}
+
+span.color {
+  display: table-cell;
+  width: 100px;
+}
+
+input[type="color"] {
+  margin: 0 auto;
+  width: 100%;
+  height: 30px;
+  border: 1px;
+  border-style: solid;
+  outline: none;
+}
+
+input[type="range"] {
+  margin-top: 8px;
+}
+
+
+
+
+.slider {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0 auto;
+  width: 100%;
+  height: 15px;
+  border-radius: 10px;
+  background: #F0F0F0;
+  outline: none;
+}
+
+.button {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0 auto;
+  width: 100%;
+  height: 40px;
+  border-radius: 0px;
+  background: #F0F0F0;
+  border: none;
+  outline: none;
+}
+
+.button:hover {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0 auto;
+  width: 100%;
+  height: 40px;
+  border-radius: 0px;
+  background: #CCCCCC;
+  border: none;
+  outline: none;
+}
+
+
+.dropbtn {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0 auto;
+  width: 100%;
+  height: 40px;
+  border-radius: 0px;
+  background: #F0F0F0;
+  border: none;
+  outline: none;
+}
+
+.dropbtn:hover {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0 auto;
+  width: 100%;
+  height: 40px;
+  border-radius: 0px;
+  background: #CCCCCC;
+  border: none;
+  outline: none;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  appearance: none;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: #034078;
+  cursor: pointer;
+}
+
+.switch {
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.dropdown {
+  margin: 0;
+  width: auto;
+  height: auto;
+  display: block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  text-align: center;
+  background-color: none;
+  min-width: 160px;
+  overflow: auto;
+  z-index: 1;
+}
+
+.show {
+  display: block;
+}
+
+#alarmListbox {
+  width: 70%;
+}
+
+#alarmListbox option {
+  width: 70%;
+}
+
+.toggleSwitch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 24px;
+}
+
+.toggleSwitch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.toggle {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #CCCCCC;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.toggle:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked+.toggle {
+  background-color: #2196F3;
+}
+
+input:focus+.toggle {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.toggle:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded toggles */
+.toggle.round {
+  border-radius: 34px;
+}
+
+.toggle.round:before {
+  border-radius: 50%;
 }
